# pupcidslittletiktokhelper

./: .env.example  .gitignore  AUDIO_PREVIEW_FIX.md  AUDIO_PREVIEW_FIX_BEFORE_AFTER.md  AUDIO_PREVIEW_FIX_TESTING_GUIDE.md  AUTO_LANGUAGE_DETECTION_IMPLEMENTATION.md  BUGFIX_ANALYSIS.md  BUG_FIX_INDEX.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CHAT_INTEGRATION_GUIDE.md  CLARITYHUD_FIX_DOCUMENTATION.md  CLARITYHUD_FIX_ZUSAMMENFASSUNG.md  CLEANUP_CHANGE.md  CLOUD_SYNC_DOCUMENTATION.md  COIN_CALCULATION_FIX.md  CONNECTION_FIX_SUMMARY.md  CSP_COMPLIANCE_REPORT.md  DATABASE_ANALYSIS_INDEX.md  DEPENDENCY_FIX_SUMMARY.md  DEPLOYMENT_ZUSAMMENFASSUNG_DE.md  DOCUMENTATION.md  DYNAMIC_CATEGORIES_UPDATE.md  ELEVENLABS_INTEGRATION.md  EMOJI_RAIN_EXECUTIVE_SUMMARY.md  EMOJI_RAIN_REPAIR_COMPLETE.md  EMOJI_RAIN_UPGRADE_SUMMARY.md  ERROR_LOGS_ANALYSIS.md  ESCAPING_FIX_BEFORE_AFTER.md  ESCAPING_FIX_SUMMARY.md  EULERSTREAM_API_GUIDE.md  EULERSTREAM_CONNECTION_FIX.md  EULERSTREAM_FIX_SUMMARY.md  EULERSTREAM_KEY_TEST.md  EULERSTREAM_MIGRATION.md  EULER_BACKUP_KEY_IMPLEMENTATION.md  EULER_BACKUP_KEY_TESTING_GUIDE.md  EULER_STREAM_FIX.md  EXECUTIVE_SUMMARY.md  FIX_CONNECTION_ISSUE.md  (+166 more)
.github/: copilot-instructions.md
app/: .env.example  CHANGELOG.md  DEPLOYMENT_VERIFICATION_GUIDE.md  README.md  launch.js  package-lock.json  package.json  server.js
build-src/: README.md  build.bat  build.sh  dev-launcher.go  launcher-backup.go  launcher-gui.go  launcher-http.go  launcher.go
src-tauri/: Cargo.toml  UPDATE_KEYS.md  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
(+591 files in other folders)
