[package]
name = "tiktok-stream-tool"
version = "1.0.3"
description = "Professional TikTok LIVE streaming tool"
authors = ["Loggableim"]
license = "MIT"
repository = "https://github.com/Loggableim/pupcidslittletiktokhelper"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
